log/build_2024-12-08_14-49-51/py_pkg/stdout_stderr.log
running egg_info
writing ../../build/py_pkg/py_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/py_pkg/py_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/py_pkg/py_pkg.egg-info/entry_points.txt
writing requirements to ../../build/py_pkg/py_pkg.egg-info/requires.txt
writing top-level names to ../../build/py_pkg/py_pkg.egg-info/top_level.txt
reading manifest file '../../build/py_pkg/py_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/py_pkg/py_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying py_pkg/lidar_node.py -> /home/user/ros2_ws/build/py_pkg/build/lib/py_pkg
running install
running install_lib
copying /home/user/ros2_ws/build/py_pkg/build/lib/py_pkg/lidar_node.py -> /home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg
byte-compiling /home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/lidar_node.py to lidar_node.cpython-310.pyc
  File "/home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/lidar_node.py", line 21
    		self.get_logger().info("lidar node initialized")``1q2
    		                                                  ^
SyntaxError: invalid decimal literal

running install_data
running install_egg_info
removing '/home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/py_pkg/py_pkg.egg-info to /home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing lidar_node script to /home/user/ros2_ws/install/py_pkg/lib/py_pkg
Installing node_template script to /home/user/ros2_ws/install/py_pkg/lib/py_pkg
writing list of installed files to '/home/user/ros2_ws/build/py_pkg/install.log'
